# ddsp-piano-pytorch

./: .gitignore  PARITY_MANIFEST.md  PARITY_REPORT.md  PARITY_TOLERANCES.md  README.md  TF_TO_PT_FEATURE_MATRIX.md  pyproject.toml
advisor_evidence/: ADVISOR_PROOF_PACK.md
ddsp_piano_pytorch/: __init__.py  benchmark.py  config.py  convert_weights.py  core.py  data_pipeline.py  evaluate_model.py  preprocess_maestro.py  synthesize.py  synthesize_midi_file.py  train.py  train_single_phase.py
ddsp_piano_pytorch/configs/: dafx22.yaml  dafx22_24khz.yaml  enstdkcl_32khz.yaml  enstdkcl_8khz.yaml  maestro_v2.yaml  maestro_v2_regularized.yaml  maestro_v2_smoke.yaml  multi_instruments.yaml  surrogate.yaml
ddsp_piano_pytorch/modules/: __init__.py  fdn_reverb.py  filtered_noise.py  inharm_synth.py  losses.py  piano_model.py  processor_group.py  sub_modules.py
ddsp_piano_pytorch/utils/: __init__.py  io_utils.py  midi_utils.py
tests/: conftest.py  test_convert_weights.py  test_core_parity_acids_ircam.py  test_ddsp_piano_logic_parity.py  test_model_public_api_outputs.py  test_public_api_surface.py  test_reverb_and_parallelizer.py  test_script_api_parity.py  test_submodule_public_api_outputs.py  test_tf_reference_parity.py  test_training_regression_guards.py
