[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddsp-piano-pytorch"
version = "0.1.0"
description = "PyTorch port of DDSP-Piano with trainable MIDI-to-audio synthesis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "torchaudio>=2.0",
  "numpy",
  "scipy",
  "pyyaml",
  "soundfile",
  "pretty_midi",
  "tensorboard",
  "pandas",
]

[project.optional-dependencies]
convert = ["tensorflow>=2.10"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
parity = [
  "tensorflow>=2.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ddsp_piano_pytorch*"]
